# picodroid-rs

./: .git-blame-ignore-revs  .gitignore  .gitmodules  .markdownlint-cli2.jsonc  ARCHITECTURE.md  CLA.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSING.md  NOTICE  README.md  build.gradle.kts  build.rs  lv_conf.h  memory.x  memory_rp2350.x  package-lock.json  package.json  settings.gradle.kts
.cargo/: config.toml
.claude/: settings.json  settings.local.json
.github/workflows/: ci_checks.yml  docs.yml
bench/parity/: history.csv
boards/pico_enviro_mon/: board.toml  display_config.rs  mod.rs
boards/tdeck_plus/: mod.rs
boards/testbench/: display_config.rs  mod.rs
boards/testbench_rp2040/: board.toml  display_config.rs  mod.rs
boards/testbench_rp2350/: board.toml  mod.rs
boards/testbench_rp2350w/: board.toml  display_config.rs  mod.rs
buildSrc/: build.gradle.kts
build_support/: boards.rs  config.rs  freertos.rs  jvm_defaults.rs  lvgl.rs  network.rs  papk.rs
compat/: Cargo.toml  README.md
compat/src/: lib.rs
docs/: README.md  bugs-memory-stress-2026-07-23.md  cargo-aliases.md  debugging.md  esp32s3-toolchain.md  examples.md  getting-started.md  java-api.md  memory-diagnostics.md  parity-audit.md  picoenvmon-qa.md  porting-guide.md  quality-roadmap.md  rp2350-freertos-smp-bugs.md  shrinker.md  troubleshooting.md  writing-apps.md
docs/api/: core.md  networking.md  peripherals.md  sensors.md  storage.md  system.md  ui.md
examples/adcdemo/: AdcDemo.java  PicodroidManifest.xml
examples/androidport/: PicodroidManifest.xml  gradle.properties
examples/animdemo/: PicodroidManifest.xml
examples/anondemo/: PicodroidManifest.xml
examples/arraydemo/: PicodroidManifest.xml
examples/arraysdemo/: PicodroidManifest.xml
examples/benchmark/: PicodroidManifest.xml
examples/blinky/: PicodroidManifest.xml
examples/bootcount/: PicodroidManifest.xml
examples/bytecodecoverage/: PicodroidManifest.xml
examples/callbacktest/: PicodroidManifest.xml
examples/classlit/: PicodroidManifest.xml  build.gradle.kts
examples/clinitdemo/: PicodroidManifest.xml
examples/clockdemo/: PicodroidManifest.xml
examples/clonedemo/: PicodroidManifest.xml
examples/collectionsdemo/: PicodroidManifest.xml
examples/dialogdemo/: PicodroidManifest.xml
examples/displaydemo/: PicodroidManifest.xml
examples/dragdemo/: PicodroidManifest.xml
examples/enumdemo/: PicodroidManifest.xml
examples/exceptiondemo/: PicodroidManifest.xml
examples/executordemo/: PicodroidManifest.xml
examples/floatdemo/: PicodroidManifest.xml
examples/gcstress/: PicodroidManifest.xml
examples/gesturedemo/: PicodroidManifest.xml
examples/graphicsbench/: PicodroidManifest.xml
examples/hashmaptest/: PicodroidManifest.xml
examples/heapstress/: PicodroidManifest.xml
examples/helloworld/: PicodroidManifest.xml
examples/http_get/: PicodroidManifest.xml
examples/i2cdemo/: I2cDemo.java  PicodroidManifest.xml
examples/imagedemo/: PicodroidManifest.xml
examples/inherit/: PicodroidManifest.xml
examples/interfacedemo/: PicodroidManifest.xml
examples/iteratordemo/: PicodroidManifest.xml
examples/keyboarddemo/: PicodroidManifest.xml
examples/keydemo/: PicodroidManifest.xml
examples/lambdademo/: PicodroidManifest.xml
examples/langsuite/: PicodroidManifest.xml  build.gradle.kts
jvm/: Cargo.toml  README.md  build.rs
jvm/src/: apk.rs  array_heap.rs  chunked_slots.rs  class_file.rs  class_objects.rs  frame.rs  gc.rs  heap.rs  lib.rs  mem_diag.rs  native.rs  object_heap.rs  parity.rs  static_fields.rs  tunables.rs  types.rs
jvm/src/class_file/: accessors.rs  mod.rs  parse.rs  tests.rs
jvm/src/gc/: mod.rs  tests.rs
jvm/src/interpreter/: helpers.rs  mod.rs  ops_arrays.rs  ops_constants.rs  ops_control.rs  ops_convert.rs  ops_exceptions.rs  ops_fields.rs  ops_invoke.rs  ops_locals.rs  ops_math.rs  ops_monitor.rs  ops_stack.rs  ops_wide.rs  tests.rs
jvm/src/interpreter/tests/: arrays.rs  class_literal.rs  clinit.rs  constants.rs  control.rs  convert.rs  dispatch_state.rs  exceptions.rs  fields.rs  invoke.rs  locals.rs  long_arrays.rs  math.rs  mod.rs  multianewarray.rs  stack.rs  stack_manip.rs  wide_goto.rs
jvm/src/native/: arrays.rs  boxed.rs  class_obj.rs  collections.rs  enumeration.rs  hashmap.rs  hashset.rs  iterator.rs  math.rs  mod.rs  random.rs  string.rs  string_builder.rs  string_format.rs  tests.rs
jvm/src/object_heap/: iter_store.rs  lambda.rs  list_store.rs  map_store.rs  mod.rs
mcus/rp/: rp2040.x  (+4 more)
picodroid-core/: Cargo.toml  build.rs
picodroid-core/src/: dispatch_sites.rs  framework_classes.rs  lib.rs  lvgl_ffi.rs  shrink_names.rs  task_priority.rs
picodroid-core/src/drivers/: ltr559.rs  mod.rs  st7789.rs  xpt2046.rs
picodroid-core/src/drivers/bme688/: compensate.rs
picodroid-esp/: Cargo.toml  build.rs
picodroid-esp/.cargo/: config.toml
picodroid-esp/boards/tdeck_plus/: board.toml
picodroid-esp/src/: app.rs  main.rs
picodroid-esp/src/boards/: mod.rs
picodroid-esp/src/hal/: contract.rs  mod.rs
picodroid-esp/src/hal/esp/: boot.rs  gpio.rs  i2c.rs  mod.rs
schema/: PicodroidManifest.xsd
scripts/: build-apk.sh  build.sh  check-hil-conf.sh  check-submodules.py  check-submodules.sh  flash.sh  format_java.sh  hil-email.py  hil-run.sh  hil-tests.conf  lib.sh  lint-md.sh  papk-info.sh  parity-bench.sh  pdb.sh  power-cycle.sh  pre-commit  sim-ctrl.sh  sim-remote.sh  sim-run.sh  sim.sh  test-future-version-rejection.sh  test-heap.sh  test-jvm-env.sh  test-memdiag.sh  test.sh
sdk/: build.gradle.kts  compat-aliases.toml  keep.toml
src/: FreeRTOSConfig.h  app.rs  dispatch_sites.rs  display_test.rs  framework_classes.rs  lifecycle.rs  lvgl_ffi.rs  main.rs  service_lifecycle.rs  shrink_names.rs  sim_allocator.rs  task_priority.rs
tools/class-shrink/: Cargo.toml  README.md
tools/class-shrink/src/: classfile.rs  descriptor.rs  keep.rs  lib.rs  main.rs  mapping.rs  rename.rs  shrink.rs  version.rs
tools/papk-pack/: Cargo.toml
tools/papk-pack/src/: classcheck.rs  main.rs
website/: astro.config.mjs  package-lock.json  package.json
(+653 files in other folders)
