[workspace]
members = [".", "jvm", "tools/papk-pack", "tools/papk-info", "tools/pdb", "tools/class-shrink", "compat"]
resolver = "2"

# Local fork of littlefs-rust-core v0.1.0 with `lfs_alignup` patched to use
# wrapping arithmetic — upstream panics on u32 overflow in debug builds.
[patch.crates-io]
littlefs-rust-core = { path = "third_party/littlefs-rust-core" }

[package]
edition = "2021"
name = "picodroid"
version = "0.1.0"
license = "Apache-2.0"

[features]
default = ["board-testbench-rp2350"]
# Board selection (user-facing — pick exactly one for embedded builds)
board-testbench-rp2040 = ["chip-rp2040"]
board-testbench-rp2350 = ["chip-rp2350-hal"]
board-pico-enviro-mon = ["chip-rp2350-hal"]
board-testbench-rp2350w = ["chip-rp2350-hal", "has-network", "net-cyw43"]
# MCU selection (internal — activated by board features)
chip-rp2040 = ["dep:rp-pico", "family-rp"]
chip-rp2350-hal = ["dep:rp235x-hal", "family-rp"]
# MCU family grouping (internal)
family-rp = []
# Capability flags (has_display / has_touch are now emitted by build.rs from board.toml)
has-network = []
net-cyw43 = []
# Simulator mode (no hardware)
sim = []

[dependencies]
pico-jvm = { path = "jvm", version = "0.1" }
compat = { path = "compat" }
crc32fast = { version = "1", default-features = false }
cortex-m = "0.7"
cortex-m-rt = "0.7"
embedded-hal = { version = "1.0.0" }
freertos-rust = { version = "0.2.3", package = "freertos-rust-pd" }
defmt = "1"
littlefs-rust = { version = "0.1", default-features = false, features = ["alloc"] }

# Hardware-specific deps — only compiled when targeting ARM embedded
[target.'cfg(target_arch = "arm")'.dependencies]
rp-pico = { version = "0.9", optional = true }
rp235x-hal = { version = "0.4", optional = true, features = ["rt", "critical-section-impl"] }
defmt-rtt = "1"
panic-probe = { version = "1", features = ["print-defmt"] }

# Host-only deps — simulator display window + heap limiter
[target.'cfg(not(target_arch = "arm"))'.dependencies]
minifb = "0.28"
libc = "0.2"

[build-dependencies]
# Used to compile FreeRTOS-Kernel C source directly
cc = "1.0"
freertos-cargo-build = { version = "0.2.3", package = "freertos-cargo-build-pd" }
# Shrinker library (host-only). Applied to framework .class files whenever a
# committed shrink map covers the current picodroid package version.
class-shrink = { path = "tools/class-shrink" }

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
