[workspace]
members = [".", "jvm", "tools/papk-pack", "tools/papk-info", "tools/pdb", "tools/class-shrink", "compat", "picodroid-core"]
resolver = "2"

# Local fork of littlefs-rust-core v0.1.0 with `lfs_alignup` patched to use
# wrapping arithmetic — upstream panics on u32 overflow in debug builds.
[patch.crates-io]
littlefs-rust-core = { path = "third_party/littlefs-rust-core" }

[package]
edition = "2021"
name = "picodroid"
version = "0.8.0"
license = "GPL-3.0-only"

[features]
# Bare `cargo build` uses this default. To target a different board (or sim),
# use the per-board cargo aliases — see docs/cargo-aliases.md.
default = ["board-testbench-rp2350"]
# Board selection (user-facing — pick exactly one for embedded builds)
board-testbench-rp2040 = ["chip-rp2040"]
board-testbench-rp2350 = ["chip-rp2350"]
board-pico-enviro-mon = ["chip-rp2350"]
board-testbench-rp2350w = ["chip-rp2350"]
board-tdeck-plus = ["chip-esp32s3"]
# MCU selection (internal — activated by board features)
chip-rp2040 = ["dep:rp-pico", "family-rp"]
chip-rp2350 = ["dep:rp235x-hal", "family-rp"]
chip-esp32s3 = ["family-esp"]
# MCU family grouping (internal — forwarded to picodroid-core so both crates
# see the same family feature without requiring duplicate cfg flags).
family-rp = ["picodroid-core/family-rp"]
family-esp = ["picodroid-core/family-esp"]
# Capability cfgs (has_display / has_touch / has_network / network_<type>) are emitted
# by build.rs from board.toml — not Cargo features. See build.rs::emit_network_config.
# Simulator mode (no hardware)
sim = ["picodroid-core/sim"]

[dependencies]
picodroid-core = { path = "picodroid-core" }
pico-jvm = { path = "jvm", version = "0.1" }
compat = { path = "compat" }
crc32fast = { version = "1", default-features = false }
embedded-hal = { version = "1.0.0" }
defmt = "1"
littlefs-rust = { version = "0.1", default-features = false, features = ["alloc"] }

# RP-family (Cortex-M) embedded deps.
[target.'cfg(target_arch = "arm")'.dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
freertos-rust = { version = "0.2.3", package = "freertos-rust-pd" }
rp-pico = { version = "0.9", optional = true }
rp235x-hal = { version = "0.4", optional = true, features = ["rt", "critical-section-impl"] }
defmt-rtt = "1"
panic-probe = { version = "1", features = ["print-defmt"] }

# ESP-family (Xtensa LX7) embedded deps.
# xtensa-lx-rt provides the Xtensa reset vector and entry-point macro without
# pulling in any riscv-rt transitive deps, avoiding the riscv-rt `links`
# conflict that would arise from mixing esp-hal (requires riscv-rt ^0.16) with
# rp235x-hal (requires riscv-rt ^0.12) in the same workspace. esp-hal and
# real peripheral drivers are added in later milestones once the conflict is
# resolved upstream (rp235x-hal tracking riscv-rt ^0.16).
[target.'cfg(target_arch = "xtensa")'.dependencies]
xtensa-lx-rt = "0.21"
critical-section = "1"
# Heap allocator for no_std ESP builds. RP uses FreeRtosAllocator; sim uses
# CappedAllocator; ESP stubs use embedded-alloc backed by a static heap buffer.
embedded-alloc = "0.5"

# Host-only deps — simulator display window + heap limiter.
# Excluded from all embedded targets (both ARM and Xtensa).
[target.'cfg(not(any(target_arch = "arm", target_arch = "xtensa")))'.dependencies]
minifb = "0.28"
libc = "0.2"

[build-dependencies]
# Used to compile FreeRTOS-Kernel C source directly
cc = "1.0"
freertos-cargo-build = { version = "0.2.3", package = "freertos-cargo-build-pd" }
# Shrinker library (host-only). Applied to framework .class files whenever a
# committed shrink map covers the current picodroid package version.
class-shrink = { path = "tools/class-shrink" }

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
# Xtensa exception handlers are tiny routines that must be optimized even in
# debug builds — unoptimized code exceeds the Xtensa code-size limits.
[profile.dev.package.xtensa-lx-rt]
opt-level = "z"

[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
