[workspace]
members = ["platforms/rp", "jvm", "tools/papk-pack", "tools/papk-info", "tools/pdb", "tools/class-shrink", "compat", "picodroid-core"]
resolver = "2"

# Local fork of littlefs-rust-core v0.1.0 with `lfs_alignup` patched to use
# wrapping arithmetic — upstream panics on u32 overflow in debug builds.
[patch.crates-io]
littlefs-rust-core = { path = "third_party/littlefs-rust-core" }

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch

[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
