[package]
name = "pico-jvm"
version = "0.1.1"
edition = "2021"
rust-version = "1.70"
license = "GPL-3.0-only"
description = "A no_std Java bytecode interpreter for bare-metal embedded systems"
repository = "https://github.com/shivrajora/picodroid-rs"
keywords = ["jvm", "java", "embedded", "bytecode", "no-std"]
categories = ["embedded", "no-std", "virtualization"]
readme = "README.md"

[dependencies]
libm = { version = "0.2", default-features = false }
compat = { path = "../compat" }

[features]
# Deterministic sim<->device execution counters (docs/parity-audit.md P1).
parity-metrics = []
