[package]
name = "class-shrink"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"
description = "Build-time Java class/method name shrinker for picodroid. Maps are release-versioned and append-only."
readme = "README.md"

[[bin]]
name = "class-shrink"
path = "src/main.rs"

[lib]
path = "src/lib.rs"
