[package]
name = "papk-pack"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"
description = "Packages compiled Java .class files into a PAPK (Picodroid APK) file"

[[bin]]
name = "papk-pack"
path = "src/main.rs"

[dependencies]
# Host-only PNG decode for `--assets-dir`. Trimmed to the PNG codec to keep
# `cargo build` fast; this dependency NEVER enters the firmware build graph.
image = { version = "0.25", default-features = false, features = ["png"] }
